--- a/字符串NO.2
+++ b/字符串NO.2
@@ -81,3 +81,24 @@ int main()
         cout<<"<";
     return 0;
 }
+
+
+法三：
+#include<bits/stdc++.h>
+#include<string.h>
+using namespace std;
+int main()
+{
+    char n[100],m[100];
+    gets(n);//输入字符串
+    gets(m);
+    int ptr;
+    ptr=strnicmp(n,m,strlen(n));//strnicmp函数：忽略大小写比较较字符串大小
+    if(ptr>0)
+    cout <<">";
+    else if(ptr<0)
+    cout<<"<";
+    else if(ptr==0)
+    cout<<"=";
+    return 0;
+}
