高次方求模

--- a/基础算法NO.8
+++ b/基础算法NO.8
@@ -1,3 +1,21 @@
+高次方求模
+主要思想为分而治之，
+首先采用的是递归法，
+2^100mod3
+2^100=(2^50)^2=((2^25)^2)^2=((((2^1)^2)^2)...)^2)
+最终会得到2^1%3即递归的边界
+同时要考虑奇数和偶数的情况
+偶数：2^100=(2^50)^2
+奇数：2^99=(2^49)^2*2
+所以可以得知当指数为奇数时，要多乘一个底数
+同时还要注意特殊情况，指数为0时，返回1，为1时，返回底数。
+递推法：首先将指数转换为二进制，
+2^100mod3
+(100)10=(1100100)2
+2^100=2^2^6*2^2^5*2^2^2
+100=2^6*1+2^5*1+2^2*1
+即可求得
+
 递归法：
 #include <iostream>
 #include<algorithm>
