欧几里得算法求最大公因数

--- a/基础算法NO.6
+++ b/基础算法NO.6
@@ -1,3 +1,9 @@
+欧几里得算法又称为辗转相除法。
+首先，两个数比较大小，用较大的数除以较小的数，其余数若为零，则较小的数为则两个数的最大公因数。
+否则，当余数不为零时，进入循环，除数和余数反复做取余运算，
+判断条件为余数是否为零。
+当余数为零时，跳出循环，得到最大公因数为当前算式中的除数。
+
 #include<stdio.h>
 int main()
 {
