--- a/基础算法NO.1
+++ b/基础算法NO.1
@@ -1,3 +1,13 @@
+三点顺序
+分析： 
+利用矢量叉积判断是逆时针还是顺时针。 
+设A(x1,y1),B(x2,y2),C(x3,y3),则三角形两边的矢量分别是： 
+AB=(x2-x1,y2-y1), AC=(x3-x1,y3-y1) 
+则AB和AC的叉积为：(2*2的行列式) 
+|x2-x1, y2-y1| 
+|x3-x1, y3-y1| 
+值为：(x2-x1)(y3-y1) - (y2-y1)(x3-x1)
+
 #include <iostream>
 #include<algorithm>
 #include<cstdio>
