--- a/基础算法NO.2
+++ b/基础算法NO.2
@@ -1,3 +1,9 @@
+海伦公式：
+已知三角形三边分别为a,b,c,
+则由海伦公式：(p*(p-a)*(p-b)*(p-c))^1/2,其中q为三角形周长的一半
+
+
+代码：
 #include <iostream>
 #include<algorithm>
 #include<cstdio>
