--- a/基础算法NO.4
+++ b/基础算法NO.4
@@ -1,4 +1,15 @@
 //康托展开公式：x=a[n]*(n-1)!+a[n-1]*(n-2)!+a[n-2]*(n-3)!+...+a[1]*0!
+康托展开算法主要是计算当前数字排列在所有从小到大的排列中的顺序。
+康托展开公式：x=a[n]*(n-1)!+a[n-1]*(n-2)!+a[n-2]*(n-3)!+...+a[1]*0!
+例如求231在排列{1,2,3}中的大小，
+第一个数为2，排列中比2小的数字为1，即个数为1，所以由1开头的，比231小的顺序个数为1*2！。
+第二个数为3，已知第一个数字为2，所以比3小的数字只有1，即个数为1，所以此时比231小的顺序个数为1*1！。
+最后一位为0，则此时个数为0*0！。所以可以计算出231的大小为1*2！+1*1！+0*0！=3，
+由于公式是从0开始计数的，所以最后结果为4。
+因此用代码表示要用到循环嵌套，比较每一个数的大小，然后累计后面的数字比当前数小的个数，用该个数乘相应的阶乘，最后每一项相加即可。
+
+
+代码：
 #include <iostream>
 #include<algorithm>
 #include<cstdio>
